# autoripper

./: .gitignore  pyproject.toml
src/autoripper/: __init__.py  udev_watchdog.py
src/autoripper/ui/: base_widgets.py.backup  dialogs.py  main.py  progress.py  utils.py
src/autoripper/watchdogs/: __init__.py  base.py  linux.py  windows.py
