
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "autoripper"
version = "0.3.1"
description = "Package for automagically ripping audio and video discs"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

requires-python = ">=3.9"

dependencies = [
    "PyQt5",
    "pyudev",
    "automakemkv",
    "cdripper",
#    "automakemkv@git+https://github.com/kwodzicki/autoMakeMKV",
#    "cdripper@git+https://github.com/kwodzicki/cdRipper",
]

[project.scripts]
autoripper = "autoripper.ui.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

