
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "autoripper"
version = "0.7.0"
description = "Package for automagically ripping audio and video discs"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

requires-python = ">=3.10"

dependencies = [
    "PyQt5",
    "pyudev ; platform_system == 'Linux'",
    "pywin32 ; platform_system == 'Windows'",
    "WMI ; platform_system == 'Windows'",
    "automakemkv",
    "cdripper",
#    "automakemkv@git+https://github.com/kwodzicki/autoMakeMKV",
#    "cdripper@git+https://github.com/kwodzicki/cdRipper",
]

[project.urls]
Homepage = "https://github.com/kwodzicki/autoripper"

[project.scripts]
autoripper = "autoripper.ui.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoripper = ['resources/*.png', 'resources/*.ico']
